--- a/PY/ML/4_redes_neuronales/notebook.ipynb
+++ b/PY/ML/4_redes_neuronales/notebook.ipynb
@@ -669,7 +669,7 @@
     "\n",
     "Entonces, pasemos la red neuronal a la tabla de verdad.\n",
     "\n",
-    " CAPA DE ENTRADA  |  CAPA DE ENTRADA  |  CAPA OCULTA  |  CAPA OCULTA  |  CAPA DE SALIDA \n",
+    "| $CAPA \\: \\: DE \\: \\: ENTRADA$ | $CAPA \\: \\: DE \\: \\: ENTRADA$ | $CAPA \\: \\: OCULTA$ | $CAPA \\: \\: OCULTA$ | $CAPA \\: \\: DE \\: \\: SALIDA$ |\n",
     "| :-: | :-: | :-: | :-: | :-: |\n",
     "| $ X_{1} $ | $ X_{2} $ | $ a_{1}^{2} $ | $ a_{2}^{2} $ | $ h_\\Theta(X) $ |\n",
     "| 0 | 0 | 0 | 1 | 1\n",
