--- a/SQL/intermediate_sql/notebook.ipynb
+++ b/SQL/intermediate_sql/notebook.ipynb
@@ -549,10 +549,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n",
-      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
-      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
-      "Done.\n"
+      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
      ]
     },
     {
@@ -914,10 +911,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n",
-      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
-      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
-      "Done.\n"
+      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
      ]
     },
     {
@@ -1258,7 +1252,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -1518,10 +1515,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n",
-      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
-      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
-      "Done.\n"
+      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
      ]
     },
     {
@@ -1717,10 +1711,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n",
-      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
-      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
-      "Done.\n"
+      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
      ]
     },
     {
@@ -2276,7 +2267,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -2382,7 +2376,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -2435,7 +2432,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -2489,7 +2489,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -2752,10 +2755,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n",
-      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
-      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
-      "Done.\n"
+      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
      ]
     },
     {
@@ -3463,14 +3463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -3491,7 +3494,7 @@
       "text/html": "<table>\n    <tr>\n        <th>team_short_name</th>\n        <th>team_long_name</th>\n    </tr>\n    <tr>\n        <td>CHE</td>\n        <td>Chelsea</td>\n    </tr>\n    <tr>\n        <td>SOU</td>\n        <td>Southampton</td>\n    </tr>\n    <tr>\n        <td>TOT</td>\n        <td>Tottenham Hotspur</td>\n    </tr>\n    <tr>\n        <td>REA</td>\n        <td>Real Madrid CF</td>\n    </tr>\n    <tr>\n        <td>BAR</td>\n        <td>FC Barcelona</td>\n    </tr>\n    <tr>\n        <td>PSV</td>\n        <td>PSV</td>\n    </tr>\n    <tr>\n        <td>BEN</td>\n        <td>SL Benfica</td>\n    </tr>\n    <tr>\n        <td>BMU</td>\n        <td>FC Bayern Munich</td>\n    </tr>\n    <tr>\n        <td>CEL</td>\n        <td>Celtic</td>\n    </tr>\n    <tr>\n        <td>MUN</td>\n        <td>Manchester United</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 108
+     "execution_count": 58
     }
    ],
    "source": [
@@ -3554,7 +3557,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -3788,14 +3794,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
      ]
     },
     {
@@ -3807,7 +3816,7 @@
       "text/html": "<table>\n    <tr>\n        <th>team</th>\n        <th>home_avg</th>\n    </tr>\n    <tr>\n        <td>FC Barcelona</td>\n        <td>3.8421</td>\n    </tr>\n    <tr>\n        <td>Real Madrid CF</td>\n        <td>3.6842</td>\n    </tr>\n    <tr>\n        <td>PSV</td>\n        <td>3.3529</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 65
+     "execution_count": 60
     }
    ],
    "source": [
@@ -3857,7 +3866,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   sqlite://\n",
+      "   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n",
+      " * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('England', 3), ('Germany', 1), ('Netherlands', 1), ('Spain', 4)]"
+      ],
+      "text/html": "<table>\n    <tr>\n        <th>pais</th>\n        <th>partidos_10_goles</th>\n    </tr>\n    <tr>\n        <td>England</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>Germany</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>Netherlands</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>4</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
+   "source": [
+    "%sql SELECT c.name AS pais, \\\n",
+    "COUNT(*) AS partidos_10_goles \\\n",
+    "FROM country AS c \\\n",
+    "INNER JOIN (SELECT m.id, \\\n",
+    "m.country_id \\\n",
+    "FROM match AS m \\\n",
+    "WHERE (m.home_team_goal + m.away_team_goal) >= 10 AND season IN ('2011/2012', '2012/2013', '2013/2014', '2014/2015')) AS subquery \\\n",
+    "ON c.id = subquery.country_id \\\n",
+    "GROUP BY c.name"
+   ]
+  },
+  {
+   "source": [
+    "### EX 16 : Construyendo subconsultas en FROM\n",
+    "\n",
+    "Uniremos la tabla de países a partidos, contando la cantidad de partidos por país con, al menos, 10 goles en total.\n",
+    "\n",
+    "Ahora, hallaremos más información sobre esos partidos: dónde fueron jugados, en qué temporadas, y cuántos goles hubo de local y visitante."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3871,24 +3930,90 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[('England', 3), ('Germany', 1), ('Netherlands', 1), ('Spain', 4)]"
+       "[(1729, '2009/2010', 9, 1),\n",
+       " (1729, '2011/2012', 8, 2),\n",
+       " (1729, '2012/2013', 7, 3),\n",
+       " (1729, '2012/2013', 5, 5),\n",
+       " (4769, '2009/2010', 5, 5),\n",
+       " (7809, '2012/2013', 9, 2),\n",
+       " (13274, '2010/2011', 10, 0),\n",
+       " (13274, '2011/2012', 6, 4),\n",
+       " (19694, '2009/2010', 6, 6),\n",
+       " (21518, '2013/2014', 7, 3),\n",
+       " (21518, '2014/2015', 9, 1),\n",
+       " (21518, '2014/2015', 7, 3),\n",
+       " (21518, '2014/2015', 2, 8),\n",
+       " (21518, '2015/2016', 10, 2)]"
       ],
-      "text/html": "<table>\n    <tr>\n        <th>pais</th>\n        <th>partidos_10_goles</th>\n    </tr>\n    <tr>\n        <td>England</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>Germany</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>Netherlands</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>4</td>\n    </tr>\n</table>"
+      "text/html": "<table>\n    <tr>\n        <th>country_id</th>\n        <th>temporada</th>\n        <th>goles_local</th>\n        <th>goles_visita</th>\n    </tr>\n    <tr>\n        <td>1729</td>\n        <td>2009/2010</td>\n        <td>9</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>1729</td>\n        <td>2011/2012</td>\n        <td>8</td>\n        <td>2</td>\n    </tr>\n    <tr>\n        <td>1729</td>\n        <td>2012/2013</td>\n        <td>7</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>1729</td>\n        <td>2012/2013</td>\n        <td>5</td>\n        <td>5</td>\n    </tr>\n    <tr>\n        <td>4769</td>\n        <td>2009/2010</td>\n        <td>5</td>\n        <td>5</td>\n    </tr>\n    <tr>\n        <td>7809</td>\n        <td>2012/2013</td>\n        <td>9</td>\n        <td>2</td>\n    </tr>\n    <tr>\n        <td>13274</td>\n        <td>2010/2011</td>\n        <td>10</td>\n        <td>0</td>\n    </tr>\n    <tr>\n        <td>13274</td>\n        <td>2011/2012</td>\n        <td>6</td>\n        <td>4</td>\n    </tr>\n    <tr>\n        <td>19694</td>\n        <td>2009/2010</td>\n        <td>6</td>\n        <td>6</td>\n    </tr>\n    <tr>\n        <td>21518</td>\n        <td>2013/2014</td>\n        <td>7</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>21518</td>\n        <td>2014/2015</td>\n        <td>9</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>21518</td>\n        <td>2014/2015</td>\n        <td>7</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>21518</td>\n        <td>2014/2015</td>\n        <td>2</td>\n        <td>8</td>\n    </tr>\n    <tr>\n        <td>21518</td>\n        <td>2015/2016</td>\n        <td>10</td>\n        <td>2</td>\n    </tr>\n</table>"
      },
      "metadata": {},
-     "execution_count": 86
+     "execution_count": 62
     }
    ],
    "source": [
-    "%sql SELECT c.name AS pais, \\\n",
-    "COUNT(*) AS partidos_10_goles \\\n",
+    "# Construyamos la subconsulta\n",
+    "%sql SELECT country_id, \\\n",
+    "season AS temporada, \\\n",
+    "home_team_goal AS goles_local, \\\n",
+    "away_team_goal AS goles_visita \\\n",
+    "FROM match \\\n",
+    "WHERE (goles_local + goles_visita >= 10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   sqlite://\n   sqlite:////Universidad/DataCamp/Python/intermediate_sql/SQL_SAFI.sqlite\n * sqlite:////Universidad/DataCamp/Python/intermediate_sql/european_soccer.sqlite\nDone.\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('England', '2009/2010', '2009-11-22 00:00:00', 9, 1),\n",
+       " ('England', '2011/2012', '2011-08-28 00:00:00', 8, 2),\n",
+       " ('England', '2012/2013', '2012-12-29 00:00:00', 7, 3),\n",
+       " ('England', '2012/2013', '2013-05-19 00:00:00', 5, 5),\n",
+       " ('France', '2009/2010', '2009-11-08 00:00:00', 5, 5),\n",
+       " ('Germany', '2012/2013', '2013-03-30 00:00:00', 9, 2),\n",
+       " ('Netherlands', '2010/2011', '2010-10-24 00:00:00', 10, 0),\n",
+       " ('Netherlands', '2011/2012', '2011-11-06 00:00:00', 6, 4),\n",
+       " ('Scotland', '2009/2010', '2010-05-05 00:00:00', 6, 6),\n",
+       " ('Spain', '2013/2014', '2013-10-30 00:00:00', 7, 3),\n",
+       " ('Spain', '2014/2015', '2015-04-05 00:00:00', 9, 1),\n",
+       " ('Spain', '2014/2015', '2015-05-23 00:00:00', 7, 3),\n",
+       " ('Spain', '2014/2015', '2014-09-20 00:00:00', 2, 8),\n",
+       " ('Spain', '2015/2016', '2015-12-20 00:00:00', 10, 2)]"
+      ],
+      "text/html": "<table>\n    <tr>\n        <th>country</th>\n        <th>temporada</th>\n        <th>fecha</th>\n        <th>goles_local</th>\n        <th>goles_visita</th>\n    </tr>\n    <tr>\n        <td>England</td>\n        <td>2009/2010</td>\n        <td>2009-11-22 00:00:00</td>\n        <td>9</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>England</td>\n        <td>2011/2012</td>\n        <td>2011-08-28 00:00:00</td>\n        <td>8</td>\n        <td>2</td>\n    </tr>\n    <tr>\n        <td>England</td>\n        <td>2012/2013</td>\n        <td>2012-12-29 00:00:00</td>\n        <td>7</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>England</td>\n        <td>2012/2013</td>\n        <td>2013-05-19 00:00:00</td>\n        <td>5</td>\n        <td>5</td>\n    </tr>\n    <tr>\n        <td>France</td>\n        <td>2009/2010</td>\n        <td>2009-11-08 00:00:00</td>\n        <td>5</td>\n        <td>5</td>\n    </tr>\n    <tr>\n        <td>Germany</td>\n        <td>2012/2013</td>\n        <td>2013-03-30 00:00:00</td>\n        <td>9</td>\n        <td>2</td>\n    </tr>\n    <tr>\n        <td>Netherlands</td>\n        <td>2010/2011</td>\n        <td>2010-10-24 00:00:00</td>\n        <td>10</td>\n        <td>0</td>\n    </tr>\n    <tr>\n        <td>Netherlands</td>\n        <td>2011/2012</td>\n        <td>2011-11-06 00:00:00</td>\n        <td>6</td>\n        <td>4</td>\n    </tr>\n    <tr>\n        <td>Scotland</td>\n        <td>2009/2010</td>\n        <td>2010-05-05 00:00:00</td>\n        <td>6</td>\n        <td>6</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>2013/2014</td>\n        <td>2013-10-30 00:00:00</td>\n        <td>7</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>2014/2015</td>\n        <td>2015-04-05 00:00:00</td>\n        <td>9</td>\n        <td>1</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>2014/2015</td>\n        <td>2015-05-23 00:00:00</td>\n        <td>7</td>\n        <td>3</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>2014/2015</td>\n        <td>2014-09-20 00:00:00</td>\n        <td>2</td>\n        <td>8</td>\n    </tr>\n    <tr>\n        <td>Spain</td>\n        <td>2015/2016</td>\n        <td>2015-12-20 00:00:00</td>\n        <td>10</td>\n        <td>2</td>\n    </tr>\n</table>"
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "%sql SELECT c.name AS country, \\\n",
+    "temporada, \\\n",
+    "fecha, \\\n",
+    "goles_local, \\\n",
+    "goles_visita \\\n",
     "FROM country AS c \\\n",
-    "INNER JOIN (SELECT m.id, \\\n",
-    "m.country_id \\\n",
-    "FROM match AS m \\\n",
-    "WHERE (m.home_team_goal + m.away_team_goal) >= 10 AND season IN ('2011/2012', '2012/2013', '2013/2014', '2014/2015')) AS subquery \\\n",
-    "ON c.id = subquery.country_id \\\n",
-    "GROUP BY c.name"
+    "LEFT JOIN (SELECT country_id, \\\n",
+    "season AS temporada, \\\n",
+    "date AS fecha, \\\n",
+    "home_team_goal AS goles_local, \\\n",
+    "away_team_goal AS goles_visita \\\n",
+    "FROM match \\\n",
+    "WHERE (goles_local + goles_visita >= 10)) AS m \\\n",
+    "ON m.country_id = c.id \\\n",
+    "WHERE goles_local + goles_visita >= 10"
    ]
   }
  ]
