--- a/SQL/intermediate_sql/notebook.ipynb
+++ b/SQL/intermediate_sql/notebook.ipynb
@@ -4288,13 +4288,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "Podemos apreciar como la liga de Países Bajos tiende a tener media de goles por partido que el resto de las ligas."
-   ]
+    "Podemos apreciar como la liga de Países Bajos tiende a tener una media mayor de goles por partido que el resto de las ligas."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
