--- a/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
+++ b/PY/PGRM/Object_oriented_programming_in_python/notebook.ipynb
@@ -18,12 +18,136 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Programación Orientada a Objetos en Python\n",
+    "\n",
+    "<img src=\"1.png\"></img>\n",
+    "\n",
+    "## Nota a mi mismo\n",
+    "\n",
+    "- No soy experto en programación, de hecho, me consideraría un sobreviviente. Sin embargo, espero este sea el comienzo de algo más grande.\n",
+    "\n",
+    "No es primera vez que veo curso de OOP, de hecho, es la tercera:\n",
+    "\n",
+    "- La primera vez fue en LinkedIn Learning, con un enfoque bastante interesante.\n",
+    "\n",
+    "- La segunda fue este mismo curso.\n",
+    "\n",
+    "- La tercera, pues, volver a hacer el mismo curso para recapitular conceptos que creí innecesarios (bravo).\n",
+    "\n",
+    "Bueno, comencemos.\n",
+    "\n",
+    "## ¿Qué es la OOP? \n",
+    "\n",
+    "La instructora, Alex, nos enseñará a pensar orientado a objetos.\n",
+    "\n",
+    "## Programación procedimental\n",
+    "\n",
+    "Hasta ahora, probablemente hemos estado codificando en el llamado <b>estilo procedimental</b>:\n",
+    "\n",
+    "- El código era una secuencia de pasos a realizar.\n",
+    "\n",
+    "- Esto es común al hacer análisis de datos:\n",
+    "\n",
+    "    - Descargar los datos.\n",
+    "\n",
+    "    - Procesar los datos.\n",
+    "\n",
+    "    - Visualizar los datos.\n",
+    "\n",
+    "## Pensando en secuencias\n",
+    "\n",
+    "El pensamiento procedimental es natural:\n",
+    "\n",
+    "- Nos levantamos, desayunamos, y vamos a trabajar.\n",
+    "\n",
+    "Este punto de vista secuencial funciona muy bien si estamos tratando de planificar nuestro día. \n",
+    "\n",
+    "Sin embargo, si fuéramos un planificador de ciudades, tendríamos que pensar en miles de personas con sus propias rutinas.\n",
+    "\n",
+    "<img src=\"2.png\"></img>\n",
+    "\n",
+    "Tratar de trazar una secuencia de acciones para cada individuo, rápidamente, se volvería insostenible.\n",
+    "\n",
+    "En cambio, es probable que empecemos a pensar en patrones de comportamiento.\n",
+    "\n",
+    "¡Lo mismo ocurre con el código!\n",
+    "\n",
+    "Cuanto más datos utilicemos, más funcionalidades tendremos, y más difícil será pensar en esas funcionalidades como una secuencia de pasos.\n",
+    "\n",
+    "## Programación orientada a objetos\n",
+    "\n",
+    "En cambio, lo veremos como una colección de objetos y patrones de sus interacciones, como si fueran usuarios que interactúan con elementos de una interfaz:\n",
+    "\n",
+    "- Codificamos como interacciones de objetos.\n",
+    "\n",
+    "Este punto de vista, se vuelve invaluable al diseñar marcos, como aplicaciones de interfaces de programa, o interfaces gráficas de usuario. Incluso, para construir ¡herramientas como DATAFRAMES de Pandas!\n",
+    "\n",
+    "## Espera. ¿Qué es un marco?\n",
+    "\n",
+    "Se denominan, comúnmente:\n",
+    "\n",
+    "- Entorno de trabajo.\n",
+    "\n",
+    "- Marco de trabajo.\n",
+    "\n",
+    "- Framework.\n",
+    "\n",
+    "En este sentido, es un conjunto estandarizado de conceptos, prácticas y criterios para enfocar un tipo de problemática particular, que sirve como referencia, para enfrentar y resolver nuevos problemas de índole similar.\n",
+    "\n",
+    "En concreto, en el desarrollo de software, un entorno de trabajo es una estructura conceptual y tecnológica de asistencia definida, que cuenta con artefactos o módulos concretos de software. De forma que puede servir de base para la organización y desarrollo de software. Típicamente, puede incluir soporte de programas, bibliotecas, y un lenguaje interpretado, entre otras herramientas, para así ayudar a desarrollar y unir los diferentes componentes de un proyecto.\n",
+    "\n",
+    "~ Esto, de acuerdo a [Wikipedia](https://es.wikipedia.org/wiki/Framework)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Programación orientada a objetos: continuación\n",
+    "\n",
+    "Con lo expuesto, la OOP nos ayudará a organizar mejor el código, haciéndolo reutilizable y fácil de mantener. En resumen, la OOP:\n",
+    "\n",
+    "- Codifica como interacciones de objetos.\n",
+    "\n",
+    "- Genial para construir frameworks y herramientas.\n",
+    "\n",
+    "- Mantenible y reutilizable.\n",
+    "\n",
+    "## Objetos como estructuras de información\n",
+    "\n",
+    "Los conceptos fundamentales de OOP son objetos y clases:\n",
+    "\n",
+    "- Un objeto es una estructura de datos que incorpora información sobre el estado y el comportamiento.\n",
+    "\n",
+    "$ object \\: = \\: state \\: + \\: behavior $\n",
+    "\n",
+    "Por ejemplo, un objeto que representa un cliente puede tener un determinado número de teléfono y correo electrónico asociado, así como comportamientos como 'colocarOrden' o 'cancelarOrden':\n",
+    "\n",
+    "\n",
+    "| <b>OBJETO CLIENTE</b> |\n",
+    "| --- |\n",
+    "| <b>ESTADO</b> |\n",
+    "| --------- |\n",
+    "| email = lara@company.com |\n",
+    "| tel = 614-555-0177 |\n",
+    "| --------- |\n",
+    "| <b>COMPORTAMIENTO</b> |\n",
+    "| --------- |\n",
+    "| colocarOrden() |\n",
+    "| cancelarOrden() |\n",
+    "| --------- |"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s"
+    "#3:00"
    ]
   }
  ]
